--- a/package.json
+++ b/package.json
@@ -1,20 +1,28 @@
 {
-  "name": "sorteer",
+  "name": "adhar-sort-open",
   "version": "1.0.0",
   "description": "",
   "main": "main.js",
   "scripts": {
     "start": "electron .",
+    "dist": "electron-builder",
+    "postinstall": "electron-builder install-app-deps",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
-  "license": "MIT",
-  "type": "commonjs",
-  "devDependencies": {
-    "electron": "^38.2.0"
+  "license": "ISC",
+  "build": {
+    "appId": "com.example.adharsortopen",
+    "win": {
+      "signing": false
+    }
   },
   "dependencies": {
-    "tesseract.js": "^6.0.1"
+    "python-shell": "^5.0.0"
+  },
+  "devDependencies": {
+    "electron": "^28.2.3",
+    "electron-builder": "^24.13.3"
   }
 }
